// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Letter (unit tests) when has a tag letter should match the snapshot 1`] = `
<kv-tag-letter label="Tag Letter" tag-letter="T">
  <template shadowrootmode="open">
    <div class="tag-letter-container">
      <div class="letter-avatar">
        <div class="avatar">
          T
        </div>
      </div>
      <div class="label">
        Tag Letter
      </div>
    </div>
  </template>
</kv-tag-letter>
`;

exports[`Tag Letter (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tag-letter label="Tag Letter Default">
  <template shadowrootmode="open">
    <div class="tag-letter-container">
      <div class="letter-avatar">
        <div class="avatar"></div>
      </div>
      <div class="label">
        Tag Letter Default
      </div>
    </div>
  </template>
</kv-tag-letter>
`;
